--- a/sass/components/_actual.sass
+++ b/sass/components/_actual.sass
@@ -32,7 +32,7 @@
     &__inner
         display: grid
         grid-template-columns: 50% 50%
-        grid-column-gap: 65px
+        grid-column-gap: 40px
         grid-row-gap: 100px
 
         &-logo
